# structural-modeling-tests

./: .gitignore  Makefile  README.md  create-isopach.py  mise.toml  mvt-isopachs.sh  pyproject.toml
isopachs/: Makefile  create-isopach.py
williston-basin/: README.md  pyproject.toml  williston-basin-maps.qgs
williston-basin/data/: Williston_Basin_well_data.csv
williston-basin/data/grids_horizons/: .gitignore  horizon_grids.xml
williston-basin/surfaces/: __init__.py  make_grids.py  model.py
