[project]
name = "surfaces"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Daven Quinn",email = "code@davenquinn.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipython (>=9.0.1,<10.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "geopandas (>=1.0.1,<2.0.0)"
]


[tool.poetry.scripts]
surfaces = "surfaces:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
